--- a/作业清单设计说明书.md
+++ b/作业清单设计说明书.md
@@ -20,13 +20,13 @@
 
 #### 功能需求
 * 功能划分：
- + 添加课程、作业
- ![](image/screenshot1.png)
- + 设置界面更改属性
- ![](image/screenshot2.png)
- + 通知栏常驻通知
- + 通知栏添加快捷入口（可取消）
- ![](image/screenshot3.png)
+ + 添加课程、作业  
+ <img src="./image/screenshot1.png" width="250">
+ + 设置界面更改属性  
+ <img src="./image/screenshot2.png" width="250">
+ + 通知栏常驻通知  
+ + 通知栏添加快捷入口（可取消）  
+ <img src="./image/screenshot3.png" width="250">
 * 功能描述：
  + 用户可以通过输入框输入想要通知的课程名和作业内容
  + 用户添加通知后，通知须常驻通知栏，不可侧滑取消通知，但可以点击通知后出现编辑页面后，再点击取消来取消这一条通知；也可以通过设置页面点击取消所有快捷通知来取消所有常驻状态栏的该应用通知
